# minesweeper

./: .drone.yml  .gitattributes  Cargo.toml  Readme.md  build.rs
assets/sprites/: font.aseprite  font.txt
src/: alloc.rs  assets.rs  debug.rs  difficulty.rs  fmt.rs  game.rs  graphics.rs  highscores.rs  input.rs  interface.rs  lib.rs  map.rs  mouse.rs  random.rs  sound.rs  statemachine.rs  ticker.rs  time.rs  timer.rs  wasm4.rs
src/game/: difficulty.rs  highscores.rs  loop.rs  map.rs
src/graphics/: drawcolors.rs  palette.rs  sprite.rs  tile.rs
src/input/: mouse.rs
src/statemachine/: gameover.rs  gamewon.rs  ingame.rs  initial.rs  instructions.rs  mainmenu.rs  pause.rs  pregame.rs
src/time/: ticker.rs  timer.rs
